--- a/VideoGameStore/wwwroot/seller.html
+++ b/VideoGameStore/wwwroot/seller.html
@@ -4,49 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Продавец — Flex-Shop</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;600&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="css/views_css/seller.css">
+    <link rel="stylesheet" href="css/components_css/header.css">
+    <link rel="stylesheet" href="css/components_css/footer.css">
+    <link rel="stylesheet" href="css/components_css/menu.css">
 </head>
 
 <body class="seller-page">
-    <!-- HEADER -->
-    <header class="site-header">
+    <header class="site-header" role="banner" aria-label="Главная шапка">
         <div class="header-inner">
-            <a href="index.html" class="logo">Flex-Shop</a>
-            <div class="header-actions">
-                <a href="cart.html" class="btn-icon cart">
-                    🛒 <span id="cartBadge" class="badge">0</span>
+            <div class="header-left">
+                <a href="index.html" class="logo-wrap">
+                    <div class="logo-text">Flex-Shop</div>
                 </a>
-                <button id="sellerMenuToggle" class="btn-icon user">👤</button>
+            </div>
+
+            <div class="header-right">
+                <button class="action-btn user-btn" id="userMenuToggle">
+                    <svg class="icon user-icon" viewBox="107 56 26 28" xmlns="http://www.w3.org/2000/svg"
+                         aria-hidden="true">
+                        <path d="M120 70C121.97 70 123.86 69.2625 125.253 67.9497C126.646 66.637 127.429 64.8565 127.429 63C127.429 61.1435 126.646 59.363 125.253 58.0503C123.86 56.7375 121.97 56 120 56C118.03 56 116.14 56.7375 114.747 58.0503C113.354 59.363 112.571 61.1435 112.571 63C112.571 64.8565 113.354 66.637 114.747 67.9497C116.14 69.2625 118.03 70 120 70ZM117.348 72.625C111.631 72.625 107 76.9891 107 82.3758C107 83.2727 107.772 84 108.724 84H131.276C132.228 84 133 83.2727 133 82.3758C133 76.9891 128.369 72.625 122.652 72.625H117.348Z"
+                              fill="currentColor" />
+                    </svg>
+                    <span class="action-label" id="userMenuLabel">Профиль</span>
+                </button>
             </div>
         </div>
     </header>
 
-    <!-- SELLER MENU -->
-    <div id="sellerMenu" class="side-menu">
-        <div class="menu-header">
-            <div class="avatar">👨‍💼</div>
-            <div>
-                <div id="sellerName">Продавец</div>
-                <div id="sellerEmail">-</div>
-                <div class="role">SELLER</div>
+    <!-- Меню -->
+    <div class="menu-fixed-container" id="menuContainer">
+        <!-- Меню продавца -->
+        <div id="sellerMenu" class="menu-overlay seller-menu">
+            <div class="menu-container" role="dialog" aria-label="Меню продавца">
+                <!-- Заголовок с информацией -->
+                <div class="menu-header">
+                    <div class="seller-avatar" id="sellerAvatar">П</div>
+                    <div class="seller-details">
+                        <div class="seller-name" id="sellerName">Продавец</div>
+                        <div class="seller-email" id="sellerEmail"></div>
+                        <div class="seller-role">Продавец</div>
+                        <div class="seller-stats">
+                            <span class="stat-item">Игр: <span id="sellerGamesCount">0</span></span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Навигация -->
+                <nav class="menu-nav">
+                    <button class="menu-button" id="mainSellerMenuBtn">
+                        <img src="assets/icons/buy.svg" alt="" class="menu-icon" />
+                        <span>Главная</span>
+                    </button>
+
+                    <button class="menu-button" id="sellerGamesMenuBtn">
+                        <img src="assets/icons/product.svg" alt="" class="menu-icon" />
+                        <span>Мои товары</span>
+                    </button>
+
+                    <button class="menu-button" id="sellerLogoutBtn">
+                        <img src="assets/icons/logout.svg" alt="" class="menu-icon" />
+                        <span>Выйти</span>
+                    </button>
+                </nav>
             </div>
         </div>
-        <nav class="menu-nav">
-            <button data-page="seller">📦 Мои товары</button>
-            <button data-page="orders">📋 Заказы</button>
-            <a href="index.html">🏠 Главная</a>
-            <button id="logoutBtn">🚪 Выйти</button>
-        </nav>
     </div>
 
     <!-- MAIN CONTENT -->
     <main class="seller-main">
         <div class="page-header">
-            <h1>📦 Мои товары</h1>
+            <h1>Мои товары</h1>
             <div class="stats">
                 <span id="gamesCount">0 игр</span>
-                <button id="addGameBtn" class="btn-primary">➕ Добавить игру</button>
+                <button id="addGameBtn" class="btn-primary">Добавить игру</button>
             </div>
         </div>
 
@@ -63,7 +96,7 @@
     <div id="gameModal" class="modal-overlay">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="modalTitle">➕ Добавить игру</h2>
+                <h2 id="modalTitle">Добавить игру</h2>
                 <button class="close-btn" id="closeModal">×</button>
             </div>
 
@@ -97,7 +130,6 @@
                     <div class="form-group full">
                         <label>Жанры</label>
                         <div id="genresList" class="genres-tags"></div>
-                        <button type="button" id="addGenreBtn" class="btn-small">➕ Добавить жанр</button>
                     </div>
 
                     <div class="form-group full">
@@ -113,21 +145,129 @@
                 </div>
 
                 <div class="form-actions">
-                    <button type="submit" class="btn-primary" id="saveGame">💾 Сохранить</button>
-                    <button type="button" class="btn-secondary" id="cancelGame">❌ Отмена</button>
+                    <button type="submit" class="btn-primary" id="saveGame">Сохранить</button>
+                    <button type="button" class="btn-secondary" id="cancelGame">Отмена</button>
                 </div>
             </form>
         </div>
     </div>
 
-    <!-- FOOTER -->
-    <footer class="site-footer">
-        <div>© Flex-Shop 2026 | Продавец</div>
+    <div id="editModal" class="modal-overlay">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="editModalTitle">✏️ Редактировать игру</h2>
+                <button class="close-btn" id="closeEditModal">×</button>
+            </div>
+
+            <form id="editForm" class="game-form">
+                <div class="form-grid">
+                    <div class="form-group">
+                        <label>Название игры *</label>
+                        <input type="text" id="editTitle" name="title" required maxlength="100">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Цена (₽) *</label>
+                        <input type="number" id="editPrice" name="price" min="1" step="0.01" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Разработчик *</label>
+                        <input type="text" id="editDeveloperTitle" required name="developerTitle">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Издатель *</label>
+                        <input type="text" id="editPublisherTitle" required name="publisherTitle">
+                    </div>
+
+                    <div class="form-group full">
+                        <label>Описание</label>
+                        <textarea id="editDescription" name="description" rows="4" maxlength="500"></textarea>
+                    </div>
+
+                    <div class="form-group full">
+                        <label>Жанры *</label>
+                        <div id="editGenresList" class="genres-tags"></div>
+                    </div>
+
+                    <div class="form-group full">
+                        <label>Новое изображение *</label>
+                        <input type="file" id="editImage" name="image" accept="image/*">
+                        <div id="editImagePreview" class="image-preview"></div>
+                    </div>
+                </div>
+
+                <div class="form-actions">
+                    <button type="submit" class="btn-primary" id="saveEditGame">Сохранить изменения</button>
+                    <button type="button" class="btn-secondary" id="cancelEditGame">Отмена</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div id="keysModal" class="modal-overlay">
+        <div class="modal-content keys-modal">
+            <div class="modal-header">
+                <h2 id="keysModalTitle">Добавить ключи активации</h2>
+                <button class="close-btn" id="closeKeysModal">×</button>
+            </div>
+
+            <form id="keysForm" class="keys-form">
+                <div class="form-group full">
+                    <label>Файл ключей (JSON) *</label>
+                    <input type="file" id="keysFileInput" name="keysFile" accept=".json" required>
+                    <small class="form-hint">Формат: {"keys": ["key1", "key2"]}</small>
+                </div>
+
+                <div class="form-actions">
+                    <button type="submit" class="btn-primary" id="saveKeysBtn">Добавить ключи</button>
+                    <button type="button" class="btn-secondary" id="cancelKeysBtn">Отмена</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <footer class="site-footer" role="contentinfo" aria-label="Футер">
+        <div class="footer-inner">
+            <div class="footer-left">
+                <a href="index.html" class="footer-logo-link">
+                    <div class="footer-logo-wrap">
+                        <div class="footer-logo-text">Flex-Shop</div>
+                    </div>
+                </a>
+                <div class="footer-sub">© Flex-Shop 2025. Все права защищены.</div>
+            </div>
+
+            <div class="footer-right">
+                <div class="footer-title">Мы в соцсетях</div>
+                <div class="footer-icons">
+                    <a class="social-link" href="#" aria-label="Telegram">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="58 112 29 26" class="social-svg"
+                             fill="currentColor">
+                            <path d="M86.9202 115.276L82.6948 136.491C82.3761 137.988 81.5447 138.361 80.3634 137.655L73.9253 132.605L70.8188 135.785C70.475 136.152 70.1875 136.458 69.5249 136.458L69.9875 129.477L81.9198 117.998C82.4386 117.505 81.8073 117.232 81.1134 117.725L66.3621 127.614L60.0116 125.497C58.6302 125.038 58.6052 124.027 60.2991 123.321L85.1388 113.133C86.2889 112.674 87.2952 113.406 86.9202 115.276Z" />
+                        </svg>
+                        <span class="social-label">Telegram</span>
+                    </a>
+
+                    <a class="social-link" href="#" aria-label="Вконтакте">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="107 116 28 18" class="social-svg"
+                             fill="currentColor">
+                            <path d="M134.362 117.221C134.554 116.517 134.362 116 133.437 116H130.375C129.595 116 129.237 116.444 129.044 116.939C129.044 116.939 127.485 121.051 125.281 123.717C124.569 124.488 124.242 124.736 123.852 124.736C123.659 124.736 123.363 124.488 123.363 123.785V117.221C123.363 116.377 123.145 116 122.5 116H117.687C117.198 116 116.907 116.394 116.907 116.759C116.907 117.558 118.009 117.744 118.124 119.994V124.876C118.124 125.945 117.947 126.142 117.557 126.142C116.517 126.142 113.991 122.013 112.494 117.288C112.193 116.371 111.896 116 111.112 116H108.05C107.177 116 107 116.444 107 116.939C107 117.817 108.04 122.176 111.839 127.936C114.371 131.868 117.936 134 121.18 134C123.129 134 123.368 133.527 123.368 132.712C123.368 128.954 123.192 128.6 124.169 128.6C124.621 128.6 125.401 128.848 127.22 130.743C129.299 132.993 129.642 134 130.806 134H133.868C134.741 134 135.183 133.528 134.928 132.594C134.346 130.631 130.411 126.592 130.235 126.322C129.782 125.692 129.912 125.411 130.235 124.848C130.24 124.843 133.977 119.15 134.362 117.221Z" />
+                        </svg>
+                        <span class="social-label">ВКонтакте</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- SCRIPTS -->
     <script src="js/api.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/seller.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/router.js"></script>
 </body>
 </html>
